--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -33,25 +33,14 @@ permalink: /
     <space>
         <div id="stars"></div>
         <div id="twinkling"></div> 
-        <div id="intro">
-            <h1>Hi 👋, I'm <span>Anthony</span></h1>
-            <p>I'm a 16-year-old front-end programmer that writes unrefactorable and obfuscated code.</p>
+        <div id="title-content">
+            <div id="intro">
+                <h1>Hi 👋, I'm <span>Anthony</span></h1>
+                <p>I'm a 16-year-old front-end programmer that writes unrefactorable and obfuscated code.</p>
+            </div>
+            <div id="earth"></div>
         </div>
-        <div id="earth"></div>
     </space>
-    <sky></sky>
-    <land>
-        <article id="indexArticle">
-            <p><span id="randLang">你好</span> 👋, I'm Anthony, also known as FHDHGNGN online! I am a Canadian 16 year old male, and I am a high school student in Grade 11. I specialize in front-end programming, and this website was made with just HTML, CSS and JavaScript.
-                <br><br>
-                Currently Listening To:<br>
-                <span id="playing">
-                    <span id="nowplaying"></span>
-                    <img src="" id="art"/>
-                </span>
-            </p>
-    </article>
-    </land>
     <script src="/src/scripts/index.js"></script>
     <script src="/src/scripts/music.js"></script>
 </body>
